# amstel

./: .gitignore  README.md
algebra/: infinite_vector.cpp  infinite_vector.h
design_tests/: CMakeLists.txt  test_custom_iterators.cpp  test_map_NxN.cpp  test_map_NxNxN.cpp  test_map_iterators.cpp
geometry/: grid.cpp  grid.h  sampled_mapping.cpp  sampled_mapping.h
io/: matrix_io.h  vector_io.h
unit_tests/: CMakeLists.txt  test_array1d.cpp  test_array2d.cpp  test_grid.cpp  test_infinite_vector.cpp  test_sampled_mapping.cpp
utils/: array1d.cpp  array1d.h  array2d.cpp  array2d.h
